fix: update AeronArchiveBench to jbang format
Fixed Java module access issues by converting to jbang.
Now runs correctly with Aeron 1.47.3.